# heatpump_ai

./: .gitignore  README.md  beg_waermepumpen_pruef_effizienznachweis.docx  requirements.txt
agent_v2/livekit-voice-agent/: agent.py  heating_results.json  prompt_dump.txt  prompts.py  pyproject.toml  token_server.py  tools.py  tools_1.py
agent_v3/: README.md  Running.md
agent_v3/frontend/: README.md  index.html  package.json
agent_v3/frontend/src/: App.tsx
agent_v3/livekit_voice_agent/: agent.py  main.py  prompts.py  pyproject.toml  tools.py
agent_v3/token_server/: main.py  pyproject.toml  token_server.py
climate_data_prep/: data_loading_and_exploration.ipynb  test.py  test_1.py
heatpump_list_aquisition/: beg_waermepumpen_pruef_effizienznachweis.docx:Zone.Identifier  get_tables_from_word.py  test.docx
